crates/ide/src/snapshots/ide__index__tests__multiclass-3.snap
---
source: crates/ide/src/index.rs
expression: dump_symbol_map(index.symbol_map())
---
class BaseReg<> : {
  int id;
}
class Instruction<int opc, > : {
  int opcode;
}
multiclass SimpleMulticlass {
def placeholder : BaseReg, {
}
def placeholder : BaseReg, {
}
}
multiclass TemplatedMulticlass {
def placeholder : Instruction, {
  string Name;
}
def placeholder : Instruction, {
  string Name;
}
}
multiclass AnonymousMulticlass {
def placeholder : BaseReg, {
}
def placeholder : BaseReg, {
}
def placeholder : BaseReg, {
}
}
multiclass ParentMulticlass {
def placeholder : BaseReg, {
}
}
multiclass ChildMulticlass {
def placeholder : BaseReg, {
}
}
def inst1_variant1 : BaseReg, {
}
def inst1_variant2 : BaseReg, {
}
def inst2_ri : Instruction, {
  string Name;
}
def inst2_rr : Instruction, {
  string Name;
}
multiclass OuterMulticlass {
defm placeholder : SimpleMulticlass, ;
}
def outer_inst_inner_variant1 : BaseReg, {
}
def outer_inst_inner_variant2 : BaseReg, {
}
multiclass MulticlassWithDefvar {
def placeholder : Instruction, {
}
}
variable int doubled
def computed_value : Instruction, {
}
