crates/ide/src/snapshots/ide__index__tests__multiclass.snap
---
source: crates/ide/src/index.rs
expression: dump_symbol_map(index.symbol_map())
---
class BaseReg<> : {
  int id;
}
class Instruction<int opc, > : {
  int opcode;
}
multiclass SimpleMulticlass
multiclass TemplatedMulticlass
multiclass AnonymousMulticlass
multiclass ParentMulticlass
multiclass ChildMulticlass
multiclass OuterMulticlass
multiclass MulticlassWithDefvar
variable int doubled
