crates/ide/src/snapshots/ide__index__tests__typ-2.snap
---
source: crates/ide/src/index.rs
expression: dump_diagnostics(index.diagnostics())
---
[
    Lsp(
        LspDiagnostic {
            location: FileRange {
                file: FileId(
                    0,
                ),
                range: 2238..2246,
            },
            message: "duplicate bit index 3",
        },
    ),
    Lsp(
        LspDiagnostic {
            location: FileRange {
                file: FileId(
                    0,
                ),
                range: 2270..2271,
            },
            message: "cannot set bit index 8 for bits<4>",
        },
    ),
    Lsp(
        LspDiagnostic {
            location: FileRange {
                file: FileId(
                    0,
                ),
                range: 2324..2325,
            },
            message: "expected bits type, got 'string'",
        },
    ),
]
