crates/ide/src/snapshots/ide__index__tests__typ-3.snap
---
source: crates/ide/src/index.rs
expression: dump_symbol_map(index.symbol_map())
---
class BasicTypes<> : {
  bit bit_field;
  int int_field;
  string string_field;
  code code_field;
  dag dag_field;
}
class BitsTypes<> : {
  bits<8> byte_field;
  bits<16> word_field;
  bits<32> dword_field;
}
class ListTypes<> : {
  list<int> int_list;
  list<string> string_list;
  list<bit> bit_list;
}
class NestedListTypes<> : {
  list<list<int>> matrix;
}
class RecordType<> : {
}
class HasRecordType<> : {
  RecordType record_field;
}
class TypedTemplate<int i, string s, bit b, > : {
  int int_param;
  string string_param;
  bit bit_param;
}
def correct_types : TypedTemplate, {
}
class FieldTypeCompat<> : {
  int int_field;
  string string_field;
  bit bit_field;
}
def field_compat_test : FieldTypeCompat, {
  int int_field;
  string string_field;
  bit bit_field;
}
class ListElementTypes<> : {
  list<int> numbers;
  list<string> strings;
}
class BitsOps<> : {
  bits<8> value;
  bit single_bit;
  bits<4> nibble;
}
class Base<> : {
}
class Derived<> : Base, {
}
class TypeCasting<> : {
  Base base_field;
}
def derived_instance : Derived, {
}
def cast_test : TypeCasting, {
  Base base_field;
}
class ListTemplate<list<int> values, > : {
  list<int> data;
}
def list_template_inst : ListTemplate, {
}
class base<> : {
}
class derived1<> : base, {
}
class derived2<> : base, {
}
def base_val : base, {
}
def derived1_val : derived1, {
}
def derived2_val : derived2, {
}
variable base_val if1
variable base if2
variable base if3
variable base if4
variable base if5
variable list<base_val> listconcat1
variable list<base> listconcat2
variable list<base> listconcat3
variable list<base> listconcat4
variable list<base> listconcat5
class base1<> : {
}
class base2<> : {
}
class base3<> : {
}
class derived12<> : base1, base2, {
}
class derived23<> : base2, base3, {
}
class derived123<> : base1, base2, base3, {
}
def derived12_val : derived12, {
}
def derived23_val : derived23, {
}
def derived123_val : derived123, {
}
variable {base2, base1} if_multi1
variable {base3, base2} if_multi2
variable base2 if_multi3
variable list<base> list1
variable list<{base2, base1}> list2
variable list<base1> list3
class RangeListTest<> : {
  bits<4> bits_field;
  string str_field;
}
class SuffixTypeTest<> : {
  bits<4> bits_field;
  bit range_suffix_1;
  bits<2> range_suffix_2;
  list<int> int_list;
  int slice_suffix_1;
  list<int> slice_suffix_2;
}
