crates/ide/src/snapshots/ide__index__tests__typ-4.snap
---
source: crates/ide/src/index.rs
expression: "dump_diagnostics(&index.diagnostics, &f)"
---
testdata/type.td
duplicate bit index 3
  let bits_field{3...0, 3} = 1;
                 ^^^^^^^^

testdata/type.td
cannot set bit index 8 for bits<4>
  let bits_field{8} = 1;
                 ^

testdata/type.td
expected bits type, got 'string'
  let str_field{0} = "fuga";
                ^
