crates/ide/src/snapshots/ide__index__tests__value-2.snap
---
source: crates/ide/src/index.rs
expression: "dump_diagnostics(&index.diagnostics, &f)"
---
testdata/value.td
expected bit; found string
    int bad_cond = !cond("str": 1, false: 2);
                         ^^^^^

testdata/value.td
inconsistent types int and string for !cond
    int bad_value = !cond(true: 1, true: "str");
                                         ^^^^^
