crates/ide/src/snapshots/ide__index__tests__value-3.snap
---
source: crates/ide/src/index.rs
expression: dump_symbol_map(index.symbol_map())
---
class Foo<> : {
  bits<4> x;
}
class Interleave<> : {
  string x;
}
class Cond<> : {
  int ok;
  int bad_cond;
  int bad_value;
}
class BitsConcat<> : {
  bits<3> a;
  bits<4> b;
  bits<7> ab;
}
