crates/ide/src/snapshots/ide__index__tests__value.snap
---
source: crates/ide/src/index.rs
expression: dump_symbol_map(index.symbol_map())
---
class Foo<> : {
  bits<4> x;
}
