crates/ide/src/snapshots/ide__index__tests__variables.snap
---
source: crates/ide/src/index.rs
expression: dump_symbol_map(index.symbol_map())
---
class BaseClass<> : {
  int value;
}
variable int simple_var
variable string string_var
variable list<int> list_var
def my_def : BaseClass, {
  int value;
}
variable my_def record_var
variable int i
variable int item
variable int local_var
variable int x
variable int y
variable int outer_var
variable int i
variable int inner_var
class TemplateClass<int x, > : {
  int param;
}
variable int computed_value
def template_with_var : TemplateClass, {
}
variable string concat_result
variable int add_result
variable list<int> list_concat
variable int shadowed
variable int i
variable int shadowed
variable int condition
variable int conditional_value
multiclass MulticlassWithVar {
def placeholder : BaseClass, {
  int value;
}
}
variable int offset
defset list<BaseClass> foreach_set
variable int i
variable list<bit> filter_list
variable bit x
variable int foldl_list
variable int acc
variable int var
variable list<int> foreach_list
variable int x
